# labpawspublic

./: .copier-answers.yml  .gitignore  .prettierignore  LICENSE  MANIFEST.in  README.md  RELEASE.md  eslint.config.mjs  package-lock.json  package.json  pyproject.toml  setup.py  tsconfig.json
.github/: dependabot.yml
.github/workflows/: build.yml  check-release.yml
_temp_extension/: .copier-answers.yml  .gitignore  .prettierignore  LICENSE  README.md  RELEASE.md  install.json  package.json  pyproject.toml
_temp_extension/.github/workflows/: build.yml  check-release.yml
_temp_extension/labpawspublic/: __init__.py
_temp_extension/src/: index.ts
schema/: plugin.json
src/: icons.ts  index.ts
