[build-system]
requires = ["jupyter-packaging~=0.10,<2", "jupyterlab~=3.1"]
build-backend = "jupyter_packaging.build_api"

[tool.jupyter-packaging.options]
skip-if-exists = ["labpawspublic/labextension/static/style.js"]
ensured-targets = ["labpawspublic/labextension/static/style.js", "labpawspublic/labextension/package.json"]

[tool.jupyter-packaging.builder]
factory = "jupyter_packaging.npm_builder"

[tool.jupyter-packaging.build-args]
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.check-manifest]
ignore = ["labpawspublic/labextension/**", "yarn.lock", ".*", "package-lock.json"]

[tool.poetry]
name = "labpawspublic"
version = "0.1.0"
description = ""
authors = ["Chico Venancio <chicocvenancio@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
jupyterlab = "^3.2.1"
jupyter-packaging = "^0.11.0"

[tool.poetry.dev-dependencies]
check-manifest = "^0.47"
